se hizo el form para crear admin

--- a/administradores/form_admin.html
+++ b/administradores/form_admin.html
@@ -4,10 +4,10 @@
 	</head>
 	<body>
 		<form action="create_admin.php" method="POST">
-			user
+			usuario
 			<input type="text" name="u">
 			<br>
-			pass
+			contraseña
 			<input type="password" name="p">
 			<button>Crear</button>
 		</form>
