lista de compras solo funciona para admins

--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<form action="login.php" method="POST">
+		<form action="login_admin.php" method="POST">
 			usuario
 			<input type="text" name="u">
 			<br>
