se añade el sobre nosotros

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>NBA Collection | login </title>
+		<title>NBA Collection | About </title>
 		
 		<!-- Meta tag Keywords -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -80,8 +80,8 @@
 					<div class="col-md-3 logo_electronics">
 						<h1 class="text-center">
 							<a href="#" class="font-weight-bold font-italic">
-								<img src="imagenes/nc_logo.png" alt=" " class="img-fluid" style="height: 70px;"> NBA Collection
-							</a>
+								<img src="imagenes/nc_logo.png" alt=" " class="img-fluid" style="height: 70px;"> <a href="paginaweb.php">NBA Collection <a href="paginaweb.php">					
+                            	</a>
 						</h1>
 					</div>
 	
@@ -95,16 +95,17 @@
 
 
 <head>
-		<meta charset="utf-8">
-	</head>
-	<body>
-		<form action="login.php" method="POST">
-			usuario
-			<input type="text" name="u">
-			<br>
-			contraseña
-			<input type="password" name="p">
-			<button>Acceder</button>
-		</form>
-	</body>
-</html>
+
+	<div class="privacy py-sm-5 py-4">
+		<div class="container py-xl-4 py-lg-2">
+			<!-- tittle heading -->
+			<h3 class="tittle-storesl text-center mb-lg-5 mb-sm-4 mb-3">
+				<span>N</span>osotros
+			</h3>
+            <li>
+                <a>NBA Collection es una tienda virtual de camisetas de colección con talla única en la provincia de Piura.</a> <!--href="product.php"-->
+
+            </li>
+			<!-- //tittle heading -->
+			<div class="checkout-right">
+				<div class="table-responsive">
